Rendering issues fix
- Added a new few new grid maps to test different map sizes (scenarios).
- Fixed a bug with the horizontal and vertical lengths of the array reading and writing being switched.
- Added styling changes to the upload grid text to prevent overflowing of text.

--- a/world editing tool/assets/stylesheet.css
+++ b/world editing tool/assets/stylesheet.css
@@ -15,6 +15,12 @@ body {
     margin: 0;
 }
 
+label { 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 div#EditingMenu {
     position: relative;
     left: 0;
